<resources>
    <string name="app_name">Grocery List</string>
    <string name="action_settings">Settings</string>
    <string name="add_item">Add First Item</string>
    <string name="title_text">Enter Grocery Item</string>
    <string name="item_hint">Enter Grocery</string>
    <string name="quantity_hint">Quantity</string>
    <string name="save_button">Save</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="sure_alert">Are You Sure?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
</resources>
